--- a/Covid Notification/Covid Notification.csproj
+++ b/Covid Notification/Covid Notification.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Covid_Notification</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>Vaccine_Icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
